Actualizacion Gmail API ahora como WebService EmailWS

--- a/tablesoft-net/TableSoft/TableSoft/App.config
+++ b/tablesoft-net/TableSoft/TableSoft/App.config
@@ -24,7 +24,14 @@
                 <binding name="TareaWSPortBinding" />
                 <binding name="TareaPredeterminadaWSPortBinding" />
                 <binding name="ReporteWSPortBinding" />
+                <binding name="EmailWSSoap" />
             </basicHttpBinding>
+            <customBinding>
+                <binding name="EmailWSSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+            </customBinding>
         </bindings>
         <client>
             <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ActivoFijoWS"
@@ -81,6 +88,9 @@
             <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ReporteWS"
                 binding="basicHttpBinding" bindingConfiguration="ReporteWSPortBinding"
                 contract="ReporteWS.ReporteWS" name="ReporteWSPort" />
+            <endpoint address="http://23.22.97.25/TableSoftEmail/EmailWS.asmx"
+                binding="basicHttpBinding" bindingConfiguration="EmailWSSoap"
+                contract="EmailWS.EmailWSSoap" name="EmailWSSoap" />
         </client>
     </system.serviceModel>
   <runtime>
