--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -416,7 +416,6 @@
       <DependentUpon>frmSeleccionarUrgencia.cs</DependentUpon>
     </Compile>
     <Compile Include="Movimiento.cs" />
-    <Compile Include="PasswordGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -424,6 +423,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="RandomGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -776,6 +776,9 @@
     <None Include="Connected Services\PersonaWS\PersonaWS.wsdl" />
     <None Include="Connected Services\PersonaWS\PersonaWS.xsd">
       <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\PersonaWS\TableSoft.PersonaWS.actualizarPassResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\PersonaWS\TableSoft.PersonaWS.persona.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
