--- a/tablesoft-java/TableSoftServicesTest/web/WEB-INF/web.xml
+++ b/tablesoft-java/TableSoftServicesTest/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>ReporteTickets</servlet-name>
         <servlet-class>pe.edu.pucp.tablesoft.servlets.ReporteTickets</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ReporteTicketCategoria</servlet-name>
+        <servlet-class>pe.edu.pucp.tablesoft.servlets.ReporteTicketCategoria</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ReporteTickets</servlet-name>
         <url-pattern>/ReporteTickets</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ReporteTicketCategoria</servlet-name>
+        <url-pattern>/ReporteTicketCategoria</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
