--- a/tablesoft-java/JSoft/.project
+++ b/tablesoft-java/JSoft/.project
@@ -22,6 +22,31 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>Grafico_ActivoFijo_Categoria.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_ActivoFijo_Categoria.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_ActivoFijo_Categoria.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_ActivoFijo_Categoria.jrxml</location>
+		</link>
+		<link>
+			<name>Grafico_ActivoFijo_Urgencia.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_ActivoFijo_Urgencia.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_ActivoFijo_Urgencia.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_ActivoFijo_Urgencia.jrxml</location>
+		</link>
+		<link>
+			<name>Grafico_ActivosFijos_Categoria.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_ActivosFijos_Categoria.jrxml</location>
+		</link>
+		<link>
 			<name>Grafico_Demorados_Categoria.jasper</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Demorados_Categoria.jasper</location>
@@ -30,6 +55,16 @@
 			<name>Grafico_Demorados_Categoria.jrxml</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Demorados_Categoria.jrxml</location>
+		</link>
+		<link>
+			<name>Grafico_Demorados_Urgencia.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Demorados_Urgencia.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_Demorados_Urgencia.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Demorados_Urgencia.jrxml</location>
 		</link>
 		<link>
 			<name>Grafico_Escalados_Categoria.jasper</name>
@@ -42,6 +77,16 @@
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Escalados_Categoria.jrxml</location>
 		</link>
 		<link>
+			<name>Grafico_Escalados_Urgencia.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Escalados_Urgencia.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_Escalados_Urgencia.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Escalados_Urgencia.jrxml</location>
+		</link>
+		<link>
 			<name>Grafico_Recategorizados_Categoria.jasper</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Recategorizados_Categoria.jasper</location>
@@ -50,6 +95,16 @@
 			<name>Grafico_Recategorizados_Categoria.jrxml</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Recategorizados_Categoria.jrxml</location>
+		</link>
+		<link>
+			<name>Grafico_Recategorizados_Urgencia.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Recategorizados_Urgencia.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_Recategorizados_Urgencia.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Recategorizados_Urgencia.jrxml</location>
 		</link>
 		<link>
 			<name>Grafico_Tickets_Biblioteca_Categoria.jasper</name>
@@ -62,6 +117,16 @@
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Biblioteca_Categoria.jrxml</location>
 		</link>
 		<link>
+			<name>Grafico_Tickets_Categoria_Urgencia.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Categoria_Urgencia.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_Tickets_Categoria_Urgencia.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Categoria_Urgencia.jrxml</location>
+		</link>
+		<link>
 			<name>Grafico_Tickets_Dia_Categoria.jasper</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Dia_Categoria.jasper</location>
@@ -70,6 +135,26 @@
 			<name>Grafico_Tickets_Dia_Categoria.jrxml</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Dia_Categoria.jrxml</location>
+		</link>
+		<link>
+			<name>Grafico_Tickets_Dia_Urgencia.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Dia_Urgencia.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_Tickets_Dia_Urgencia.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Dia_Urgencia.jrxml</location>
+		</link>
+		<link>
+			<name>Grafico_Tickets_Urgencia_Categoria.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Urgencia_Categoria.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_Tickets_Urgencia_Categoria.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Urgencia_Categoria.jrxml</location>
 		</link>
 		<link>
 			<name>ReporteTicket.jasper</name>
@@ -92,6 +177,31 @@
 			<location>C:/Users/CARBAJAL/Documents/Repositorios/tablesoft/tablesoft-java/TableSoftReports/build/classes/pe/edu/pucp/tablesoft/reports/ReporteTicket.jasper</location>
 		</link>
 		<link>
+			<name>Reporte_Urgencia.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Reporte_Urgencia.jrxml</location>
+		</link>
+		<link>
+			<name>Resumen_ActivoFijo_Categoria.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_ActivoFijo_Categoria.jasper</location>
+		</link>
+		<link>
+			<name>Resumen_ActivoFijo_Categoria.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_ActivoFijo_Categoria.jrxml</location>
+		</link>
+		<link>
+			<name>Resumen_ActivoFijo_Urgencia.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_ActivoFijo_Urgencia.jasper</location>
+		</link>
+		<link>
+			<name>Resumen_ActivoFijo_Urgencia.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_ActivoFijo_Urgencia.jrxml</location>
+		</link>
+		<link>
 			<name>Resumen_Demorados_Categoria.jasper</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_Demorados_Categoria.jasper</location>
@@ -102,6 +212,16 @@
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_Demorados_Categoria.jrxml</location>
 		</link>
 		<link>
+			<name>Resumen_Demorados_Urgencia.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_Demorados_Urgencia.jasper</location>
+		</link>
+		<link>
+			<name>Resumen_Demorados_Urgencia.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_Demorados_Urgencia.jrxml</location>
+		</link>
+		<link>
 			<name>Resumen_Escalados_Categoria.jasper</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_Escalados_Categoria.jasper</location>
@@ -110,6 +230,26 @@
 			<name>Resumen_Escalados_Categoria.jrxml</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_Escalados_Categoria.jrxml</location>
+		</link>
+		<link>
+			<name>Resumen_Escalados_Urgencia.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_Escalados_Urgencia.jasper</location>
+		</link>
+		<link>
+			<name>Resumen_Escalados_Urgencia.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_Escalados_Urgencia.jrxml</location>
+		</link>
+		<link>
+			<name>Resumen_Recategorizados_Urgencia.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_Recategorizados_Urgencia.jasper</location>
+		</link>
+		<link>
+			<name>Resumen_Recategorizados_Urgencia.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Resumen_Recategorizados_Urgencia.jrxml</location>
 		</link>
 	</linkedResources>
 </projectDescription>
