Reporte categorias y urgencias

--- a/tablesoft-net/TableSoft/TableSoft/App.config
+++ b/tablesoft-net/TableSoft/TableSoft/App.config
@@ -23,7 +23,8 @@
                 <binding name="PaisWSPortBinding" />
                 <binding name="TareaWSPortBinding" />
                 <binding name="TareaPredeterminadaWSPortBinding" />
-                <binding name="ReporteWSPortBinding" />
+                <binding name="ReporteWSPortBinding" receiveTimeout="00:1:00" sendTimeout="00:1:00"
+maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
                 <binding name="EmailWSSoap" />
             </basicHttpBinding>
             <customBinding>
