--- a/tablesoft-java/TableSoftServicesTest/web/WEB-INF/web.xml
+++ b/tablesoft-java/TableSoftServicesTest/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>ReporteTicketUrgencia</servlet-name>
         <servlet-class>pe.edu.pucp.tablesoft.servlets.ReporteTicketUrgencia</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ReporteTicketAgente</servlet-name>
+        <servlet-class>pe.edu.pucp.tablesoft.servlets.ReporteTicketAgente</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ReporteTickets</servlet-name>
         <url-pattern>/ReporteTickets</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>ReporteTicketUrgencia</servlet-name>
         <url-pattern>/ReporteTicketUrgencia</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ReporteTicketAgente</servlet-name>
+        <url-pattern>/ReporteTicketAgente</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
