--- a/tablesoft-java/JSoft/.settings/org.eclipse.core.resources.prefs
+++ b/tablesoft-java/JSoft/.settings/org.eclipse.core.resources.prefs
@@ -1,9 +1,11 @@
 eclipse.preferences.version=1
 encoding/Grafico_ActivoFijo_Agente.jrxml=UTF-8
 encoding/Grafico_ActivoFijo_Categoria.jrxml=UTF-8
+encoding/Grafico_ActivoFijo_Equipo.jrxml=UTF-8
 encoding/Grafico_ActivoFijo_Urgencia.jrxml=UTF-8
 encoding/Grafico_Demorados_Agente.jrxml=UTF-8
 encoding/Grafico_Demorados_Categoria.jrxml=UTF-8
+encoding/Grafico_Demorados_Equipo.jrxml=UTF-8
 encoding/Grafico_Demorados_Urgencia.jrxml=UTF-8
 encoding/Grafico_Escalados_Agente.jrxml=UTF-8
 encoding/Grafico_Escalados_Categoria.jrxml=UTF-8
@@ -13,12 +15,15 @@ encoding/Grafico_Recategorizados_Categoria.jrxml=UTF-8
 encoding/Grafico_Recategorizados_Urgencia.jrxml=UTF-8
 encoding/Grafico_Tickets_Biblioteca_Categoria.jrxml=UTF-8
 encoding/Grafico_Tickets_Categoria_Agente.jrxml=UTF-8
+encoding/Grafico_Tickets_Categoria_Equipo.jrxml=UTF-8
 encoding/Grafico_Tickets_Categoria_Urgencia.jrxml=UTF-8
 encoding/Grafico_Tickets_Dia_Agente.jrxml=UTF-8
 encoding/Grafico_Tickets_Dia_Categoria.jrxml=UTF-8
+encoding/Grafico_Tickets_Dia_Equipo.jrxml=UTF-8
 encoding/Grafico_Tickets_Dia_Urgencia.jrxml=UTF-8
 encoding/Grafico_Tickets_Urgencia_Agente.jrxml=UTF-8
 encoding/Grafico_Tickets_Urgencia_Categoria.jrxml=UTF-8
+encoding/Grafico_Tickets_Urgencia_Equipo.jrxml=UTF-8
 encoding/Lista_Comentarios_Ticket.jrxml=UTF-8
 encoding/Lista_Tareas_Ticket.jrxml=UTF-8
 encoding/Lista_Transferencia_Externa.jrxml=UTF-8
