--- a/tablesoft-java/JSoft/.project
+++ b/tablesoft-java/JSoft/.project
@@ -42,6 +42,16 @@
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_ActivoFijo_Categoria.jrxml</location>
 		</link>
 		<link>
+			<name>Grafico_ActivoFijo_Equipo.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_ActivoFijo_Equipo.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_ActivoFijo_Equipo.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_ActivoFijo_Equipo.jrxml</location>
+		</link>
+		<link>
 			<name>Grafico_ActivoFijo_Urgencia.jasper</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_ActivoFijo_Urgencia.jasper</location>
@@ -70,6 +80,16 @@
 			<name>Grafico_Demorados_Categoria.jrxml</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Demorados_Categoria.jrxml</location>
+		</link>
+		<link>
+			<name>Grafico_Demorados_Equipo.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Demorados_Equipo.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_Demorados_Equipo.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Demorados_Equipo.jrxml</location>
 		</link>
 		<link>
 			<name>Grafico_Demorados_Urgencia.jasper</name>
@@ -102,6 +122,11 @@
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Escalados_Categoria.jrxml</location>
 		</link>
 		<link>
+			<name>Grafico_Escalados_Equipo.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Escalados_Equipo.jrxml</location>
+		</link>
+		<link>
 			<name>Grafico_Escalados_Urgencia.jasper</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Escalados_Urgencia.jasper</location>
@@ -130,6 +155,11 @@
 			<name>Grafico_Recategorizados_Categoria.jrxml</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Recategorizados_Categoria.jrxml</location>
+		</link>
+		<link>
+			<name>Grafico_Recategorizados_Equipo.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Recategorizados_Equipo.jrxml</location>
 		</link>
 		<link>
 			<name>Grafico_Recategorizados_Urgencia.jasper</name>
@@ -162,6 +192,16 @@
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Categoria_Agente.jrxml</location>
 		</link>
 		<link>
+			<name>Grafico_Tickets_Categoria_Equipo.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Categoria_Equipo.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_Tickets_Categoria_Equipo.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Categoria_Equipo.jrxml</location>
+		</link>
+		<link>
 			<name>Grafico_Tickets_Categoria_Urgencia.jasper</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Categoria_Urgencia.jasper</location>
@@ -192,6 +232,16 @@
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Dia_Categoria.jrxml</location>
 		</link>
 		<link>
+			<name>Grafico_Tickets_Dia_Equipo.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Dia_Equipo.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_Tickets_Dia_Equipo.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Dia_Equipo.jrxml</location>
+		</link>
+		<link>
 			<name>Grafico_Tickets_Dia_Urgencia.jasper</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Dia_Urgencia.jasper</location>
@@ -220,6 +270,16 @@
 			<name>Grafico_Tickets_Urgencia_Categoria.jrxml</name>
 			<type>1</type>
 			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Urgencia_Categoria.jrxml</location>
+		</link>
+		<link>
+			<name>Grafico_Tickets_Urgencia_Equipo.jasper</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Urgencia_Equipo.jasper</location>
+		</link>
+		<link>
+			<name>Grafico_Tickets_Urgencia_Equipo.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/CARBAJAL/JaspersoftWorkspace/MyReports/Grafico_Tickets_Urgencia_Equipo.jrxml</location>
 		</link>
 		<link>
 			<name>ReporteTicket.jasper</name>
