--- a/tablesoft-java/JSoft/.settings/org.eclipse.core.resources.prefs
+++ b/tablesoft-java/JSoft/.settings/org.eclipse.core.resources.prefs
@@ -9,9 +9,11 @@ encoding/Grafico_Demorados_Equipo.jrxml=UTF-8
 encoding/Grafico_Demorados_Urgencia.jrxml=UTF-8
 encoding/Grafico_Escalados_Agente.jrxml=UTF-8
 encoding/Grafico_Escalados_Categoria.jrxml=UTF-8
+encoding/Grafico_Escalados_Equipo.jrxml=UTF-8
 encoding/Grafico_Escalados_Urgencia.jrxml=UTF-8
 encoding/Grafico_Recategorizados_Agente.jrxml=UTF-8
 encoding/Grafico_Recategorizados_Categoria.jrxml=UTF-8
+encoding/Grafico_Recategorizados_Equipo.jrxml=UTF-8
 encoding/Grafico_Recategorizados_Urgencia.jrxml=UTF-8
 encoding/Grafico_Tickets_Biblioteca_Categoria.jrxml=UTF-8
 encoding/Grafico_Tickets_Categoria_Agente.jrxml=UTF-8
@@ -34,13 +36,17 @@ encoding/Reporte_Categoria.jrxml=UTF-8
 encoding/Reporte_Urgencia.jrxml=UTF-8
 encoding/Resumen_ActivoFijo_Agente.jrxml=UTF-8
 encoding/Resumen_ActivoFijo_Categoria.jrxml=UTF-8
+encoding/Resumen_ActivoFijo_Equipo.jrxml=UTF-8
 encoding/Resumen_ActivoFijo_Urgencia.jrxml=UTF-8
 encoding/Resumen_Demorados_Agente.jrxml=UTF-8
 encoding/Resumen_Demorados_Categoria.jrxml=UTF-8
+encoding/Resumen_Demorados_Equipo.jrxml=UTF-8
 encoding/Resumen_Demorados_Urgencia.jrxml=UTF-8
 encoding/Resumen_Escalados_Agente.jrxml=UTF-8
 encoding/Resumen_Escalados_Categoria.jrxml=UTF-8
+encoding/Resumen_Escalados_Equipo.jrxml=UTF-8
 encoding/Resumen_Escalados_Urgencia.jrxml=UTF-8
 encoding/Resumen_Recategorizados_Agente.jrxml=UTF-8
 encoding/Resumen_Recategorizados_Categoria.jrxml=UTF-8
+encoding/Resumen_Recategorizados_Equipo.jrxml=UTF-8
 encoding/Resumen_Recategorizados_Urgencia.jrxml=UTF-8
