--- a/tablesoft-net/TableSoftEmail/TableSoftEmail/Web.config
+++ b/tablesoft-net/TableSoftEmail/TableSoftEmail/Web.config
@@ -6,14 +6,36 @@
   -->
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.8"/>
-    <httpRuntime targetFramework="4.8"/>
+    <compilation debug="true" targetFramework="4.8" />
+    <httpRuntime targetFramework="4.8" />
     <webServices>
       <protocols>
-        <add name ="HttpPost"/>
+        <add name="HttpPost" />
       </protocols>
     </webServices>
   </system.web>
   
 
+  <runtime>
+  
+
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  
+
+              <dependentAssembly>
+  
+
+                    <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
+  
+
+                    <bindingRedirect oldVersion="0.0.0.0-1.8.6.0" newVersion="1.8.6.0" />
+  
+
+              </dependentAssembly>
+  
+
+        </assemblyBinding>
+  
+
+  </runtime>
 </configuration>
