Update EmailWS reference

--- a/tablesoft-net/TableSoft/TableSoft/App.config
+++ b/tablesoft-net/TableSoft/TableSoft/App.config
@@ -23,10 +23,16 @@
                 <binding name="PaisWSPortBinding" />
                 <binding name="TareaWSPortBinding" />
                 <binding name="TareaPredeterminadaWSPortBinding" />
-                <binding name="ReporteWSPortBinding" receiveTimeout="00:1:00" sendTimeout="00:1:00"
-maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
+                <binding name="ReporteWSPortBinding" receiveTimeout="00:01:00"
+                    sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
                 <binding name="EmailWSSoap" />
             </basicHttpBinding>
+            <customBinding>
+                <binding name="EmailWSSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+            </customBinding>
         </bindings>
         <client>
             <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ActivoFijoWS"
@@ -47,9 +53,6 @@ maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
             <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ComentarioWS"
                 binding="basicHttpBinding" bindingConfiguration="ComentarioWSPortBinding"
                 contract="ComentarioWS.ComentarioWS" name="ComentarioWSPort" />
-            <endpoint address="http://23.22.97.25/TableSoftEmail/EmailWS.asmx"
-                binding="basicHttpBinding" bindingConfiguration="EmailWSSoap"
-                contract="EmailWS.EmailWSSoap" name="EmailWSSoap" />
             <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EmpleadoWS"
                 binding="basicHttpBinding" bindingConfiguration="EmpleadoWSPortBinding"
                 contract="EmpleadoWS.EmpleadoWS" name="EmpleadoWSPort" />
@@ -86,6 +89,12 @@ maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
             <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ReporteWS"
                 binding="basicHttpBinding" bindingConfiguration="ReporteWSPortBinding"
                 contract="ReporteWS.ReporteWS" name="ReporteWSPort" />
+            <endpoint address="http://34.200.88.54/TableSoftEmail/EmailWS.asmx"
+                binding="basicHttpBinding" bindingConfiguration="EmailWSSoap"
+                contract="EmailWS.EmailWSSoap" name="EmailWSSoap" />
+            <endpoint address="http://34.200.88.54/TableSoftEmail/EmailWS.asmx"
+                binding="customBinding" bindingConfiguration="EmailWSSoap12"
+                contract="EmailWS.EmailWSSoap" name="EmailWSSoap12" />
         </client>
     </system.serviceModel>
   <runtime>
