--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -688,7 +688,7 @@
     <None Include="Connected Services\ComentarioWS\TableSoft.ComentarioWS.listarComentariosDeTicketResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\EmailWS\EmailWS.wsdl" />
+    <None Include="Connected Services\EmailWS\EmailWS1.wsdl" />
     <None Include="Connected Services\EmpleadoWS\EmpleadoWS.wsdl" />
     <None Include="Connected Services\EmpleadoWS\EmpleadoWS.xsd">
       <SubType>Designer</SubType>
