Lista de todos los tickets registrados para el administrador

--- a/tablesoft-net/TableSoft/TableSoft/App.config
+++ b/tablesoft-net/TableSoft/TableSoft/App.config
@@ -13,7 +13,8 @@
                 <binding name="AgenteWSPortBinding" />
                 <binding name="EmpleadoWSPortBinding" />
                 <binding name="RolWSPortBinding" />
-                <binding name="TicketWSPortBinding" />
+                <binding name="TicketWSPortBinding" receiveTimeout="00:01:00"
+                    sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647"/>
                 <binding name="ActivoFijoWSPortBinding" />
                 <binding name="CiudadWSPortBinding" />
                 <binding name="ComentarioWSPortBinding" />
