--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -158,6 +158,12 @@
     <Compile Include="frmInicioSesion\frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmListaTickets.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmListaTickets.Designer.cs">
+      <DependentUpon>frmListaTickets.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmReportes\frmSeleccionarObjeto.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -432,6 +438,9 @@
   <ItemGroup>
     <EmbeddedResource Include="frmInicioSesion\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmListaTickets.resx">
+      <DependentUpon>frmListaTickets.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmReportes\frmSeleccionarObjeto.resx">
       <DependentUpon>frmSeleccionarObjeto.cs</DependentUpon>
