--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -828,6 +828,9 @@
     <None Include="Connected Services\ReporteWS\ReporteWS.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Connected Services\ReporteWS\TableSoft.ReporteWS.generarReporteGeneralResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\ReporteWS\TableSoft.ReporteWS.generarReporteTicketAgenteResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
